  EntityImpl now returns an empty entity for non-loaded foreign key values
  EntityConnectionImpl package private now
  EntityConnections added as a factory for the above class
  DatabaseConnections added as a factory for the DatabaseConnection class
  ConnectionPoolImpl package private
  ConnectionPools added as a factory class for the above
  DatabaseConnection, moved a few methods to PoolableConnection
  EntityGenerator refactored into tools.generator.EntityGeneratorModel and tools.generator.ui.EntityGeneratorPanel
  Dependency entanglement removed from common.db and framework.domain
  AbstractFilteredTablePanel.initializeFilterPanel() is no longer abstract, class renamed to FilteredTablePanel
  FilteredTablePanel.initializeFilterPanel() removed
  AbstractFilteredTableModel now range checks selection indexes
  EntityGeneratorModel.getDocumentText() added
  EntityGeneratorModelTest fleshed out some
  EntityGeneratorModel improved
  AbstractFilteredTableModel.refresh() no longer resets the sorting state, simply sorts the model before returning
  ConnectionPoolImpl, Stack replaced with Deque
  EntityUiUtil.checkProperty() added, used throughout
  DefaultEntityModel.refreshDetailModelsAfterDelete() bug fix
  EntityUiUtil.NewEntityAction did not initialize the edit panel so it appeared empty
  EntityConnection.selectRows() removed
  AbstractFilteredTableModel refresh/sorting/selection functionality improved a bit
  EntityApplicationPanel.initializeUI() now adds the main entity models to the application model
  EntityGeneratorModel fixed maximumFractionDigits appearing on non-floating point data types
  EntityUiUtil.selectEntities() now handles when the dialog is closed via [x]
  EntityTablePanel, removed a few redundant constructors
  EntityUtil.getUpdatableProperties() did not anticipate read only foreign key properties :|
  ComboBoxValueLink now handles FilteredComboBoxModel with the null value selected correctly
  EntityUtil.Validator moved to Entities